# xray_projection_render

./: .gitignore  Makefile  PYTHON_USAGE.md  README.md  SESSION.md  api.go  build.sh  cube.yaml  cuda_backend.cu  cuda_backend.go  cuda_backend.h  cuda_path.go  cuda_path_stub.go  cuda_test.go  cuda_voxel.go  cuda_voxel_stub.go  deformation.yaml  example_usage.py  go.mod  go.sum  kelvin.yaml  kelvin_w_box.json  lat_w_box.yaml  lattice.yaml  main.go  main_test.go  pyproject.toml  sphere.go  sphere_test.go  xray_renderer.py
.github/workflows/: release.yml
deformations/: deformations.go  deformations_test.go
diary/: 2026-06-14.md  2026-06-15.md  2026-06-18.md
examples/: balls.json  box_w_pped.yaml  cube_w_hole.yaml  deformation.yaml  deformation_linear.yaml  demo.ipynb  gyroid_example.yaml  lattice.yaml  pillar_array.json
lattices/: lattices.go
objects/: objects.go  objects_test.go
xray_projection_render/: xray_renderer.py
